[package]
name = "substrate-node-example"
version = "0.1.0"
edition = "2021"

[workspace]

# [features]
# # Enable this to use the reconnecting rpc client
# unstable-reconnecting-rpc-client = ["dep:reconnecting-jsonrpsee-ws-client"]

[dependencies]
# subxt = { version = "0.35.2", features = ["unstable-light-client", "jsonrpsee"] }
subxt = { path = "../../subxt", features = ["unstable-reconnecting-rpc-client"] }
subxt-signer = { path = "../../signer" }
codec = { package = "parity-scale-codec", version = "3.6.1", features = ['derive'] }
env_logger = "0.11"
log = "0.4.14"
serde_json = "1.0.79"
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }
tokio-util = "0.7.8"

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
kitchensink-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
# pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

jsonrpsee = { version = "0.22", features = ["jsonrpsee-types"] }

# # Reconnecting jsonrpc ws client
# reconnecting-jsonrpsee-ws-client = { version = "0.3", optional = true }
